Attempting to fix the horizontal alignment

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -107,6 +107,7 @@ img{
     h1 {
       display: flex;
       align-items: center;
+      justify-content: center;
       gap: 10px;
     }
 
